# sirauth

./: Cargo.toml  docker-compose.yaml  go.mod  go.sum
cmd/api/: main.go
db/migration/: 000001_init.up.sql
ent/: client.go  config.go  ent.go  mutation.go  realm.go  realm_create.go  realm_delete.go  realm_query.go  realm_update.go  realmoauthclient.go  realmoauthclient_create.go  realmoauthclient_delete.go  realmoauthclient_query.go  realmoauthclient_update.go  tx.go
ent/enttest/: enttest.go
ent/hook/: hook.go
ent/migrate/: schema.go
ent/predicate/: predicate.go
ent/realm/: realm.go  where.go
ent/realmoauthclient/: realmoauthclient.go  where.go
ent/runtime/: runtime.go
ent/schema/: realm.go  realmclient.go
pkg/entities/: client.go  organization.go
pkg/entities/realm/: realm.go  routes.go
pkg/routes/: clients.go  routes.go
scripts/: db.sql
siridentity/: siridentity.go
sirjwt/: sirjwt.go
src/: main.rs
templates/: approve.gohtml
