[package]
name = "sirauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.17", features = ["tracing"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["trace"] }
jsonwebtoken = "8.3.0"
